customer-db-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: customer-db-mysql
  name: customer-db-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: customer-db-mysql
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/sales-order-system: "true"
        io.kompose.service: customer-db-mysql
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: customerdb
            - name: MYSQL_ROOT_PASSWORD
              value: root
          image: mysql:8
          name: customer-service-mysql
          ports:
            - containerPort: 3306
          resources: {}
      restartPolicy: Always
status: {}
