order-service-db-mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: order-service-db-mongodb
  name: order-service-db-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: order-service-db-mongodb
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/sales-order-system: "true"
        io.kompose.service: order-service-db-mongodb
    spec:
      containers:
        - image: mongo
          name: order-service-mongodb
          ports:
            - containerPort: 27017
          resources: {}
      restartPolicy: Always
status: {}
