product-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: product-service
  name: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: product-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/sales-order-system: "true"
        io.kompose.service: product-service
    spec:
      containers:
        - env:
            - name: COMPOSE_PROJECT_NAME
              valueFrom:
                configMapKeyRef:
                  key: COMPOSE_PROJECT_NAME
                  name: env
            - name: SPRING_PROFILES_ACTIVE
              valueFrom:
                configMapKeyRef:
                  key: SPRING_PROFILES_ACTIVE
                  name: env
          image: product-service
          name: product-service
          ports:
            - containerPort: 8083
          resources: {}
      restartPolicy: Always
status: {}
