customer-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: customer-service
  name: customer-service
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081

  selector:
    io.kompose.service: customer-service
status:
  loadBalancer: {}
