order-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: order-service
  name: order-service
spec:
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8082

  selector:
    io.kompose.service: order-service
status:
  loadBalancer: {}
