product-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: product-service
  name: product-service
spec:
  ports:
    - name: "8083"
      port: 8083
      targetPort: 8083

  selector:
    io.kompose.service: product-service
status:
  loadBalancer: {}
