user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: user-service
  name: user-service
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080

  selector:
    io.kompose.service: user-service
status:
  loadBalancer: {}
