sales-order-system-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: sales-order-system
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/sales-order-system: "true"
  podSelector:
    matchLabels:
      io.kompose.network/sales-order-system: "true"
